--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "http": "0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "s3-file-concat": "^1.0.7",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.1068.0"
   }
 }
