--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "component-bind": "^1.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -14,7 +15,8 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "s3-file-concat": "^1.0.7",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "socket.io-stream": "^0.9.1"
   },
   "devDependencies": {
     "aws-sdk": "^2.1068.0"
