s3 요금을 낮추기 위해 각각의 chunk를 압축해서 줄인 용량으로 파일 업로드 다운로드 시 해당 파일의 buffer의 압축을 해제해서 이어 붙여서 파일 다운로드 목적: s3 요금 줄이기 완료

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "morgan": "~1.9.1",
     "s3-file-concat": "^1.0.7",
     "socket.io": "^4.4.1",
-    "socket.io-stream": "^0.9.1"
+    "socket.io-stream": "^0.9.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "aws-sdk": "^2.1068.0"
