--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^3.2.3",
+    "combined-stream": "^1.0.8",
     "component-bind": "^1.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
